[package]
name = "nvdrv-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.3"
widestring = "1"

[dependencies.windows-sys]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Power",
    "Win32_System_IO",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader"
]